--- a/FE-todo/package.json
+++ b/FE-todo/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.12",
     "antd": "^5.24.3",
     "axios": "^1.8.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
