--- a/BE-todo/package.json
+++ b/BE-todo/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.ts",
+    "start": "nodemon app.ts",
     "build": "tsc"
   },
   "keywords": [],
