--- a/BE-todo/package.json
+++ b/BE-todo/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.ts",
-    "start": "nodemon app.ts",
-    "build": "tsc"
-  },
+  "dev": "ts-node app.ts",
+  "start": "node dist/app.js",
+  "build": "tsc"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,7 +19,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.9",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@types/express": "^5.0.0",
@@ -31,6 +30,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2"
   }
 }
