--- a/FE-todo/package.json
+++ b/FE-todo/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
